--- a/index.html
+++ b/index.html
@@ -26,6 +26,130 @@
         </section>
     </header>
 
+    <main>
+        <section class="pt-5">
+            <div class="container text-center">
+                <div class="row">
+                  <div class="col-9">
+                    <div class="row">
+                      <div class="col-4 ">
+                        <div class="card mb-5"  style="width: 18rem;">
+                            <img src="images/shakib.webp" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Shakib Al Hasan</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/Musfiq.jpg" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Musfiqur Rahim</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/Mahmudullah.jpg" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Mahmudullah Riyad</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/mustafiz.jpg" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Mustafizur Rahman</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/Afif-Hossain.jpg" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Afif Hossain</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/anamul.jpg" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Anamul Bijoy</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/saifuddin.webp" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Saifuddin</h5>
+                              <a href="#" class="btn btn-primary px-5 ">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/mehedi hasan.jpg" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Mehedi Hsan</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                      <div class="col-4">
+                        <div class="card mb-5" style="width: 18rem;">
+                            <img src="images/Mosaddek-Hossain.jpg" class="card-img-top players-image pb-3" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title pb-3">Mosaddek</h5>
+                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                            </div>
+                          </div>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- <div class="col-3">
+                    <div class="bg-danger py-5 rounded-2 text-white">
+                        <h4>Selected - V</h4>
+                        <hr>
+                        <div class="">
+                            <ul class="list-unstyled fw-bold fs-5 ">
+                                <li class="mb-3">1.</li>
+                                <li class="mb-3">2.</li>
+                                <li class="mb-3">3.</li>
+                                <li class="mb-3">4.</li>
+                                <li class="mb-3">5.</li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <div class="bg-danger py-5 rounded-2  budget text-white">
+                        <h4>Budget</h4>
+                        <hr>
+                        <div class="mx-auto">
+                            <p>Per Player: <input type="text" name="" id=""></p>
+                            <button class="btn btn-primary px-5 py-2 w-75">Calculate</button>
+                            <h6 class="pt-3">Player Expenses: $<span class="fw-bold">0000</span></6>
+                            <p class="pt-3">Per Player: <input type="text" name="" id=""></p>
+                            <p>Per Player: <input type="text" name="" id=""></p>
+                            <button class="btn btn-primary px-5 py-2 w-75">Calculate</button>
+                            <h6 class="pt-3">Total: $<span class="fw-bold">0000</span></6>
+                        </div>
+                    </div>
+
+                    
+                  </div> -->
+                </div>
+              </div>
+        </section>
+    </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
