Selected player and calculation added

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                       </div>
                     </div>
                   </div>
-                  <!-- <div class="col-3">
+                  <div class="col-3">
                     <div class="bg-danger py-5 rounded-2 text-white">
                         <h4>Selected - V</h4>
                         <hr>
@@ -145,7 +145,7 @@
                     </div>
 
                     
-                  </div> -->
+                  </div>
                 </div>
               </div>
         </section>
