--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <!-- Header Added -->
+    <!-- Header -->
     <header>
         <section>
             <div class=" bg-color pt-5">
@@ -45,8 +45,8 @@
                         <div class="card mb-5 card-bg"  style="width: 18rem;">
                             <img src="images/shakib.webp" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
-                              <h5 class="card-title pb-3 text-white">Shakib Al Hasan</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                              <h5 class="card-title pb-3 text-white" id="player-one">Shakib Al Hasan</h5>
+                              <button href="#" class="btn btn-primary px-5"  id="btn-select-one" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -55,7 +55,7 @@
                             <img src="images/Musfiq.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Musfiqur Rahim</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                              <button href="#" class="btn btn-primary px-5"  id="btn-select-two" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -64,7 +64,7 @@
                             <img src="images/Mahmudullah.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Mahmudullah Riyad</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                              <button href="#" class="btn btn-primary px-5"  id="btn-select-three" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -73,7 +73,7 @@
                             <img src="images/mustafiz.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Mustafizur Rahman</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                              <button href="#" class="btn btn-primary px-5"  id="btn-select-four" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -82,7 +82,7 @@
                             <img src="images/Afif-Hossain.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Afif Hossain</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                              <button href="#" class="btn btn-primary px-5"  id="btn-select-five" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -91,68 +91,43 @@
                             <img src="images/anamul.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Anamul Bijoy</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
+                              <button href="#" class="btn btn-primary px-5"  id="btn-select-six" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
-                      </div>
-                      <div class="col-4">
-                        <div class="card mb-5 card-bg" style="width: 18rem;">
-                            <img src="images/saifuddin.webp" class="card-img-top players-image pb-3" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title pb-3 text-white">Saifuddin</h5>
-                              <a href="#" class="btn btn-primary px-5 ">SELECT</a>
-                            </div>
-                          </div>
-                      </div>
-                      <div class="col-4">
-                        <div class="card mb-5 card-bg " style="width: 18rem;">
-                            <img src="images/mehedi hasan.jpg" class="card-img-top players-image pb-3" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title pb-3 text-white">Mehedi Hsan</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
-                            </div>
-                          </div>
-                      </div>
-                      <div class="col-4">
-                        <div class="card mb-5 card-bg" style="width: 18rem;">
-                            <img src="images/Mosaddek-Hossain.jpg" class="card-img-top players-image pb-3" alt="...">
-                            <div class="card-body">
-                              <h5 class="card-title pb-3 text-white">Mosaddek</h5>
-                              <a href="#" class="btn btn-primary px-5">SELECT</a>
-                            </div>
-                          </div>
-                      </div>
+                      </div> 
                     </div>
                   </div>
-<!-- Selected Player list -->
+<!-- Selected Player list start -->
                   <div class="col-3">
                     <div class="bg-dark py-5 rounded-2 text-white">
                         <h4>Selected - V</h4>
                         <hr>
+                        <!-- Selected players lists in table start -->
                         <div class="">
-                            <ul class="list-unstyled fw-bold fs-5 ">
-                                <li class="mb-3">1.</li>
-                                <li class="mb-3">2.</li>
-                                <li class="mb-3">3.</li>
-                                <li class="mb-3">4.</li>
-                                <li class="mb-3">5.</li>
-                            </ul>
+                            <table class="table table-borderless text-white fw-bold">
+                                <tbody id="Selected-players-table"></tbody>
+                              </table>
                         </div>
+                        <!-- Selected players lists in table end -->
                     </div>
-<!-- Calculation -->
-                    <div class="bg-dark py-5 rounded-2  budget text-white">
+
+                    <!-- Selected Player list end -->
+                <!-- Calculation start -->
+                    <div class="bg-dark py-3 rounded-2  budget text-white">
                         <h4>Budget</h4>
                         <hr>
                         <div class="mx-auto">
                             <p>Per Player: <input type="text" name="" id=""></p>
-                            <button class="btn btn-primary px-5 py-2 w-100 calculate-button">Calculate</button>
+                            <button class="btn btn-primary px-5 py-2  calculate-button">Calculate</button>
                             <h6 class="pt-3">Player Expenses: $<span class="fw-bold">0000</span></6>
                             <p class="pt-3">Per Player: <input type="text" name="" id=""></p>
                             <p>Per Player: <input type="text" name="" id=""></p>
-                            <button class="btn btn-primary px-5 py-2 w-100 calculate-button">Calculate Total</button>
+                            <button class="btn btn-primary px-5 py-2  calculate-button">Calculate Total</button>
                             <h6 class="pt-3">Total: $<span class="fw-bold text-danger">0000</span></6>
                         </div>
                     </div>
+
+                    <!-- Calculation end -->
 
                     
                   </div>
@@ -169,5 +144,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    <script src="js/utilities.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
