player budget and total player budget calculation

--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                         <h4>Budget</h4>
                         <hr>
                         <div class="mx-auto">
-                            <p>Per Player: <input type="text" name="" id=""></p>
-                            <button class="btn btn-primary px-5 py-2  calculate-button">Calculate</button>
-                            <h6 class="pt-3">Player Expenses: $<span class="fw-bold">0000</span></6>
-                            <p class="pt-3">Per Player: <input type="text" name="" id=""></p>
-                            <p>Per Player: <input type="text" name="" id=""></p>
-                            <button class="btn btn-primary px-5 py-2  calculate-button">Calculate Total</button>
-                            <h6 class="pt-3">Total: $<span class="fw-bold text-danger">0000</span></6>
+                            <p>Per Player: <input type="text" name="" id="per-player-budget-field"></p>
+                            <button class="btn btn-primary px-5 py-2 calculate-button" id="btn-calculate">Calculate</button>
+                            <h6 class="pt-3">Player Expenses: $<span id="selected-player-expense" class="fw-bold">0000</span></6>
+                            <p class="pt-3">Manager: <input type="text" name="" id="manager-budget-field"></p>
+                            <p>Coach: <input type="text" name="" id="manager-budget-field"></p>
+                            <button class="btn btn-primary px-5 py-2  calculate-button" id="btn-total-calculation">Calculate Total</button>
+                            <h6 class="pt-3">Total: $<span class="fw-bold text-danger" id="total-expenses">0000</span></6>
                         </div>
                     </div>
 
