Manager and coach budget added and total calculation added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class=" bg-color pt-5">
                 <div class="row">
                   <div class="col-8 p-5">
-                    <h1 class="text-end title pt-5">Best Player Of BD, Asia Cup 2022</h1>
+                    <h1 class="text-end title pt-5">Choose Best Player Of BD, Asia Cup 2022</h1>
                     <p class="text-center paragraph text-light">The 2022 Asia Cup is scheduled to be the 15th edition of the Asia Cup cricket tournament, with the matches being played as Twenty20 Internationals during August and September 2022 in the United Arab Emirates.</p>
                   </div>
                   <div class="col-4">
@@ -119,11 +119,11 @@
                         <div class="mx-auto">
                             <p>Per Player: <input type="text" name="" id="per-player-budget-field"></p>
                             <button class="btn btn-primary px-5 py-2 calculate-button" id="btn-calculate">Calculate</button>
-                            <h6 class="pt-3">Player Expenses: $<span id="selected-player-expense" class="fw-bold">0000</span></6>
-                            <p class="pt-3">Manager: <input type="text" name="" id="manager-budget-field"></p>
-                            <p>Coach: <input type="text" name="" id="manager-budget-field"></p>
+                            <h6 class="pt-3">Player Expenses:&nbsp; $<span id="selected-player-expense" class="fw-bold text-danger">0000</span></6>
+                            <p class="pt-3">Manager: <input id="manager-budget-field" type="text" name="" ></p>
+                            <p>Coach: &nbsp; &nbsp;&nbsp;<input id="coach-budget-field" type="text" name="" ></p>
                             <button class="btn btn-primary px-5 py-2  calculate-button" id="btn-total-calculation">Calculate Total</button>
-                            <h6 class="pt-3">Total: $<span class="fw-bold text-danger" id="total-expenses">0000</span></6>
+                            <h6 class="pt-3">Total:&nbsp; $<span class="fw-bold text-danger" id="total-expenses">0000</span></6>
                         </div>
                     </div>
 
