--- a/index.html
+++ b/index.html
@@ -135,13 +135,15 @@
               </div>
         </section>
     </main>
-
+    <!-- main end -->
+    <!-- footer started -->
     <footer>
         <hr class="line">
         <div>
             <p class="py-3 text-white text-center">Copyright @ 2022 All Rights Reserved</p>
         </div>
     </footer>
+    <!-- footer ended -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="js/utilities.js"></script>
