--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bangladeshi Best Players</title>
+    <title>Choose Best Player Of BD</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style/style.css">
   </head>
@@ -46,7 +46,7 @@
                             <img src="images/shakib.webp" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white" id="player-one">Shakib Al Hasan</h5>
-                              <button href="#" class="btn btn-primary px-5"  id="btn-select-one" onclick=" selectPlayer(this)">SELECT</button>
+                              <button href="#" class="btn btn-primary px-5 select-button"  id="btn-select-one" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -55,7 +55,7 @@
                             <img src="images/Musfiq.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Musfiqur Rahim</h5>
-                              <button href="#" class="btn btn-primary px-5"  id="btn-select-two" onclick=" selectPlayer(this)">SELECT</button>
+                              <button href="#" class="btn btn-primary px-5 select-button"  id="btn-select-two" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -64,7 +64,7 @@
                             <img src="images/Mahmudullah.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Mahmudullah Riyad</h5>
-                              <button href="#" class="btn btn-primary px-5"  id="btn-select-three" onclick=" selectPlayer(this)">SELECT</button>
+                              <button href="#" class="btn btn-primary px-5 select-button"  id="btn-select-three" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -73,7 +73,7 @@
                             <img src="images/mustafiz.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Mustafizur Rahman</h5>
-                              <button href="#" class="btn btn-primary px-5"  id="btn-select-four" onclick=" selectPlayer(this)">SELECT</button>
+                              <button href="#" class="btn btn-primary px-5 select-button"  id="btn-select-four" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -82,7 +82,7 @@
                             <img src="images/Afif-Hossain.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Afif Hossain</h5>
-                              <button href="#" class="btn btn-primary px-5"  id="btn-select-five" onclick=" selectPlayer(this)">SELECT</button>
+                              <button href="#" class="btn btn-primary px-5 select-button"  id="btn-select-five" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div>
@@ -91,7 +91,7 @@
                             <img src="images/anamul.jpg" class="card-img-top players-image pb-3" alt="...">
                             <div class="card-body">
                               <h5 class="card-title pb-3 text-white">Anamul Bijoy</h5>
-                              <button href="#" class="btn btn-primary px-5"  id="btn-select-six" onclick=" selectPlayer(this)">SELECT</button>
+                              <button href="#" class="btn btn-primary px-5 select-button"  id="btn-select-six" onclick=" selectPlayer(this)">SELECT</button>
                             </div>
                           </div>
                       </div> 
@@ -117,11 +117,11 @@
                         <h4>Budget</h4>
                         <hr>
                         <div class="mx-auto">
-                            <p>Per Player: <input type="text" name="" id="per-player-budget-field"></p>
+                            <p>Per Player: <input type="number" name="" id="per-player-budget-field"></p>
                             <button class="btn btn-primary px-5 py-2 calculate-button" id="btn-calculate">Calculate</button>
                             <h6 class="pt-3">Player Expenses:&nbsp; $<span id="selected-player-expense" class="fw-bold text-danger">0000</span></6>
-                            <p class="pt-3">Manager: <input id="manager-budget-field" type="text" name="" ></p>
-                            <p>Coach: &nbsp; &nbsp;&nbsp;<input id="coach-budget-field" type="text" name="" ></p>
+                            <p class="pt-3">Manager: <input id="manager-budget-field" type="number" name="" ></p>
+                            <p>Coach: &nbsp; &nbsp;&nbsp;<input id="coach-budget-field" type="number" name="" ></p>
                             <button class="btn btn-primary px-5 py-2  calculate-button" id="btn-total-calculation">Calculate Total</button>
                             <h6 class="pt-3">Total:&nbsp; $<span class="fw-bold text-danger" id="total-expenses">0000</span></6>
                         </div>
